[package]
name = "bpf-program-template"
version = "0.1.0"
edition = "2021"
license = "WTFPL"
publish = false

[dependencies]
solana-program = "=1.16.1"
thiserror = "1.0.63"
spl-token = {version = "3.2.0", features = ["no-entrypoint"]}
arrayref = "0.3.6"


[lib]
crate-type = ["cdylib", "lib"]
